[package]
authors = ["Twilight Contributors"]
edition = "2018"
name = "twilight-http-proxy"
version = "0.1.0"

[dependencies]
dashmap = "5.0"
http = "0.2"
hyper = { version = "0.14", features = ["tcp", "server", "client", "http1", "http2"] }
hyper-rustls = { version = "0.23", default-features = false, features = ["webpki-tokio", "http1", "http2"] }
hyper-trust-dns = { version = "0.3", default-features = false }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twilight-http-ratelimiting = "0.9"

# Only used by the `expose-metrics` feature.
metrics = { version = "0.18", optional = true }
metrics-exporter-prometheus = { version = "0.8", default-features = false, optional = true }
lazy_static = { version = "1.4", optional = true }

[features]
expose-metrics = ["metrics", "metrics-exporter-prometheus", "lazy_static"]

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
