[package]
authors = ["Twilight Contributors"]
edition = "2018"
name = "twilight-http-proxy"
version = "0.1.0"

[dependencies]
dashmap = "5.4"
futures-util = { version = "0.3", default-features = false }
http = "0.2"
hyper = { version = "0.14", features = ["tcp", "server", "client", "http1", "http2"] }
hyper-rustls = { version = "0.24", default-features = false, features = ["webpki-tokio", "http1", "http2"] }
hyper-trust-dns = { version = "0.5", default-features = false }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { version = "0.7.8", default-features = false, features = ["time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twilight-http-ratelimiting = "0.15"

# Only used by the `expose-metrics` feature.
metrics = { version = "0.21", optional = true }
metrics-exporter-prometheus = { version = "0.12", default-features = false, optional = true }
metrics-util = { version = "0.15", optional = true }
lazy_static = { version = "1.4", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util"] }

[features]
expose-metrics = ["metrics", "metrics-exporter-prometheus", "metrics-util", "lazy_static"]

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
